Mobile spacing fix

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ footer a {
 
 @media screen and (max-width: 450px) {
   .intro {
-    margin-top: -50%;
+    /* margin-top: -50%; */
   }
 
   footer {
